bug: Fixes Inconsistent menus #127
Bruh this took me too long

--- a/css/about.css
+++ b/css/about.css
@@ -20,7 +20,6 @@ p {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
   background-color: #ff9800;
   margin: 0;
   text-align: center;
