--- a/css/get.css
+++ b/css/get.css
@@ -3,7 +3,6 @@ body {
   margin: 0;
   width: 100%;
   height: auto;
-  font-family: "Roboto", sans-serif;
   background: #3cbcc3;
 }
 
