--- a/css/menu.css
+++ b/css/menu.css
@@ -1,3 +1,7 @@
+* {
+  font-family: 'Palanquin', sans-serif;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
