--- a/css/new.css
+++ b/css/new.css
@@ -2,7 +2,6 @@ body {
   margin: 0;
   width: 100%;
   background-color: #ff9800;
-  font-family: 'Palanquin', sans-serif;
   height: auto;
 }
 
