--- a/css/receive.css
+++ b/css/receive.css
@@ -1,6 +1,5 @@
 html,
 body {
-  font-family: "Roboto", sans-serif;
   margin: 0;
   width: 100%;
   height: 100%;
