--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,6 @@ body.loading .loading-modal {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
   background-color: #ff9800;
   margin: 0;
 }
